--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.application'
+apply plugin: 'android-aspectj'
+apply plugin: 'android'
 
 android {
     compileSdkVersion 23
@@ -16,13 +18,16 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
+        monkeytalk.initWith(buildTypes.debug)
+        monkeytalk {
+            applicationIdSuffix ".monkey"
+        }
     }
 }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:23.0.0'
-
-    compile 'com.android.support:cardview-v7:22.0.+'
-    compile 'com.android.support:recyclerview-v7:22.0.+'
+    monkeytalkCompile fileTree(dir: 'monkey-libs', include: ['*.jar'])
 }
