--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
 
         <activity
             android:name=".DetailsActivity"
-            android:label="@string/app_name" >
+            android:label="@string/details_activity_name" >
         </activity>
     </application>
 </manifest>
